# trend-distributed-maof

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
cli/: main.py
configs/: default.yaml
tests/unit/: test_runtime.py
