[tool.poetry]
name = "trend-distributed-maof"
version = "0.1.0"
description = "Distributed MAOF System"
authors = ["Your Name <you@example.com>"]
packages = [{include = "packages"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

